# spark-match-03-backend

./: .eslintrc.cjs  .gitignore  DECISIONS.md  EVENT_CATALOG.md  README.md  package-lock.json  package.json  pyproject.toml  ruff.toml  samconfig.toml  template.yaml  tsconfig.base.json  vitest.config.mts
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml
contexts/identity/: package.json  template.yaml  tsconfig.json
contexts/identity/src/: composition.ts
contexts/identity/src/domain/: events.ts  user.ts
contexts/identity/src/handlers/: get-me.ts  index.ts  login.ts  register.ts
contexts/identity/src/infra/: db-connection.ts  user-repository.ts
contexts/identity/src/schemas/: login.schema.ts  register.schema.ts
contexts/identity/src/service/: user-service.ts
contexts/identity/tests/: user-service.test.ts
docs/: ARCHITECTURE.md  DECISIONS.md  FOLDER_STRUCTURE.md  OBSERVABILITY.md
layers/node-runtime/: build.sh  package.json
layers/node-shared/: build.sh
shared/: package.json  tsconfig.json
shared/src/: index.ts
shared/src/auth/: decode-jwt.test.ts  decode-jwt.ts  hash-password.ts  index.ts
shared/src/events/: eventbridge-client.ts  index.ts  schema-validator.ts
shared/src/http/: api-error.ts  api-response.ts  index.ts
shared/src/infra/: index.ts  secrets-reader.ts  ssm-reader.ts
shared/src/logger/: index.ts  powertools-logger.ts
shared/src/templates/: build-handler.ts  index.ts
tests/: setup.ts
